constantine-rust/constantine-sys/src/bindings64.rs

unsafe extern "C" {
    pub fn ctt_bls12_381_g2_jac_batch_affine(
        dst: *const bls12_381_g2_aff,
        src: *const bls12_381_g2_jac,
        n: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_jac_scalar_mul_big_coef(
        P: *mut bls12_381_g2_jac,
        scalar: *const big255,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_jac_scalar_mul_fr_coef(
        P: *mut bls12_381_g2_jac,
        scalar: *const bls12_381_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_jac_scalar_mul_big_coef_vartime(
        P: *mut bls12_381_g2_jac,
        scalar: *const big255,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_jac_scalar_mul_fr_coef_vartime(
        P: *mut bls12_381_g2_jac,
        scalar: *const bls12_381_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_jac_multi_scalar_mul_big_coefs_vartime(
        r: *mut bls12_381_g2_jac,
        coefs: *const big255,
        points: *const bls12_381_g2_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_jac_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bls12_381_g2_jac,
        coefs: *const bls12_381_fr,
        points: *const bls12_381_g2_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_is_eq(
        P: *const bls12_381_g2_prj,
        Q: *const bls12_381_g2_prj,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_is_neutral(P: *const bls12_381_g2_prj) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_set_neutral(P: *mut bls12_381_g2_prj);
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_ccopy(
        P: *mut bls12_381_g2_prj,
        Q: *const bls12_381_g2_prj,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_neg(P: *mut bls12_381_g2_prj, Q: *const bls12_381_g2_prj);
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_neg_in_place(P: *mut bls12_381_g2_prj);
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_cneg_in_place(P: *mut bls12_381_g2_prj, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_sum(
        r: *mut bls12_381_g2_prj,
        P: *const bls12_381_g2_prj,
        Q: *const bls12_381_g2_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_add_in_place(P: *mut bls12_381_g2_prj, Q: *const bls12_381_g2_prj);
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_diff(
        r: *mut bls12_381_g2_prj,
        P: *const bls12_381_g2_prj,
        Q: *const bls12_381_g2_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_double(r: *mut bls12_381_g2_prj, P: *const bls12_381_g2_prj);
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_double_in_place(P: *mut bls12_381_g2_prj);
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_affine(dst: *mut bls12_381_g2_aff, src: *const bls12_381_g2_prj);
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_from_affine(
        dst: *mut bls12_381_g2_prj,
        src: *const bls12_381_g2_aff,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_batch_affine(
        dst: *const bls12_381_g2_aff,
        src: *const bls12_381_g2_prj,
        n: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_scalar_mul_big_coef(
        P: *mut bls12_381_g2_prj,
        scalar: *const big255,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_scalar_mul_fr_coef(
        P: *mut bls12_381_g2_prj,
        scalar: *const bls12_381_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_scalar_mul_big_coef_vartime(
        P: *mut bls12_381_g2_prj,
        scalar: *const big255,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_scalar_mul_fr_coef_vartime(
        P: *mut bls12_381_g2_prj,
        scalar: *const bls12_381_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_multi_scalar_mul_big_coefs_vartime(
        r: *mut bls12_381_g2_prj,
        coefs: *const big255,
        points: *const bls12_381_g2_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bls12_381_g2_prj,
        coefs: *const bls12_381_fr,
        points: *const bls12_381_g2_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g1_aff_sswu_sha256(
        r: *mut bls12_381_g1_aff,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g1_jac_sswu_sha256(
        r: *mut bls12_381_g1_jac,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g1_prj_sswu_sha256(
        r: *mut bls12_381_g1_prj,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_aff_sswu_sha256(
        r: *mut bls12_381_g2_aff,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_jac_sswu_sha256(
        r: *mut bls12_381_g2_jac,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bls12_381_g2_prj_sswu_sha256(
        r: *mut bls12_381_g2_prj,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct bn254_snarks_fr {
    pub limbs: [secret_word; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of bn254_snarks_fr"][::core::mem::size_of::<bn254_snarks_fr>() - 32usize];
    ["Alignment of bn254_snarks_fr"][::core::mem::align_of::<bn254_snarks_fr>() - 8usize];
    ["Offset of field: bn254_snarks_fr::limbs"]
        [::core::mem::offset_of!(bn254_snarks_fr, limbs) - 0usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct bn254_snarks_fp {
    pub limbs: [secret_word; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of bn254_snarks_fp"][::core::mem::size_of::<bn254_snarks_fp>() - 32usize];
    ["Alignment of bn254_snarks_fp"][::core::mem::align_of::<bn254_snarks_fp>() - 8usize];
    ["Offset of field: bn254_snarks_fp::limbs"]
        [::core::mem::offset_of!(bn254_snarks_fp, limbs) - 0usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct bn254_snarks_fp2 {
    pub c: [bn254_snarks_fp; 2usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of bn254_snarks_fp2"][::core::mem::size_of::<bn254_snarks_fp2>() - 64usize];
    ["Alignment of bn254_snarks_fp2"][::core::mem::align_of::<bn254_snarks_fp2>() - 8usize];
    ["Offset of field: bn254_snarks_fp2::c"][::core::mem::offset_of!(bn254_snarks_fp2, c) - 0usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct bn254_snarks_g1_aff {
    pub x: bn254_snarks_fp,
    pub y: bn254_snarks_fp,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of bn254_snarks_g1_aff"][::core::mem::size_of::<bn254_snarks_g1_aff>() - 64usize];
    ["Alignment of bn254_snarks_g1_aff"][::core::mem::align_of::<bn254_snarks_g1_aff>() - 8usize];
    ["Offset of field: bn254_snarks_g1_aff::x"]
        [::core::mem::offset_of!(bn254_snarks_g1_aff, x) - 0usize];
    ["Offset of field: bn254_snarks_g1_aff::y"]
        [::core::mem::offset_of!(bn254_snarks_g1_aff, y) - 32usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct bn254_snarks_g1_jac {
    pub x: bn254_snarks_fp,
    pub y: bn254_snarks_fp,
    pub z: bn254_snarks_fp,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of bn254_snarks_g1_jac"][::core::mem::size_of::<bn254_snarks_g1_jac>() - 96usize];
    ["Alignment of bn254_snarks_g1_jac"][::core::mem::align_of::<bn254_snarks_g1_jac>() - 8usize];
    ["Offset of field: bn254_snarks_g1_jac::x"]
        [::core::mem::offset_of!(bn254_snarks_g1_jac, x) - 0usize];
    ["Offset of field: bn254_snarks_g1_jac::y"]
        [::core::mem::offset_of!(bn254_snarks_g1_jac, y) - 32usize];
    ["Offset of field: bn254_snarks_g1_jac::z"]
        [::core::mem::offset_of!(bn254_snarks_g1_jac, z) - 64usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct bn254_snarks_g1_prj {
    pub x: bn254_snarks_fp,
    pub y: bn254_snarks_fp,
    pub z: bn254_snarks_fp,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of bn254_snarks_g1_prj"][::core::mem::size_of::<bn254_snarks_g1_prj>() - 96usize];
    ["Alignment of bn254_snarks_g1_prj"][::core::mem::align_of::<bn254_snarks_g1_prj>() - 8usize];
    ["Offset of field: bn254_snarks_g1_prj::x"]
        [::core::mem::offset_of!(bn254_snarks_g1_prj, x) - 0usize];
    ["Offset of field: bn254_snarks_g1_prj::y"]
        [::core::mem::offset_of!(bn254_snarks_g1_prj, y) - 32usize];
    ["Offset of field: bn254_snarks_g1_prj::z"]
        [::core::mem::offset_of!(bn254_snarks_g1_prj, z) - 64usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct bn254_snarks_g2_aff {
    pub x: bn254_snarks_fp2,
    pub y: bn254_snarks_fp2,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of bn254_snarks_g2_aff"][::core::mem::size_of::<bn254_snarks_g2_aff>() - 128usize];
    ["Alignment of bn254_snarks_g2_aff"][::core::mem::align_of::<bn254_snarks_g2_aff>() - 8usize];
    ["Offset of field: bn254_snarks_g2_aff::x"]
        [::core::mem::offset_of!(bn254_snarks_g2_aff, x) - 0usize];
    ["Offset of field: bn254_snarks_g2_aff::y"]
        [::core::mem::offset_of!(bn254_snarks_g2_aff, y) - 64usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct bn254_snarks_g2_jac {
    pub x: bn254_snarks_fp2,
    pub y: bn254_snarks_fp2,
    pub z: bn254_snarks_fp2,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of bn254_snarks_g2_jac"][::core::mem::size_of::<bn254_snarks_g2_jac>() - 192usize];
    ["Alignment of bn254_snarks_g2_jac"][::core::mem::align_of::<bn254_snarks_g2_jac>() - 8usize];
    ["Offset of field: bn254_snarks_g2_jac::x"]
        [::core::mem::offset_of!(bn254_snarks_g2_jac, x) - 0usize];
    ["Offset of field: bn254_snarks_g2_jac::y"]
        [::core::mem::offset_of!(bn254_snarks_g2_jac, y) - 64usize];
    ["Offset of field: bn254_snarks_g2_jac::z"]
        [::core::mem::offset_of!(bn254_snarks_g2_jac, z) - 128usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct bn254_snarks_g2_prj {
    pub x: bn254_snarks_fp2,
    pub y: bn254_snarks_fp2,
    pub z: bn254_snarks_fp2,
}
